# Yelp_recommender

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
data/: micro_to_macro.parquet
notebooks/: Yelp_Dataset.ipynb
src/Smart_Restaurant_Recommender/: main.py  preprocessing.py  recommender.py  utils.py
src/Yelp_recommender/: main.py  preprocessing.py  recommender.py  utils.py
src/smart_restaurant_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
