[project]
name = "smart-restaurant-recommender"
version = "0.1.0"
description = "Content-based recommendation system using Yelp dataset"
authors = [
    { name = "Maïmouna", email = "maymounaijdag@email.com" }
    
]
requires-python = ">=3.11,<3.12"

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "tqdm==4.66.4",
    "streamlit==1.35.0",
    "sentence-transformers==2.7.0",
    "torch==2.3.1",
    "joblib==1.4.2",
]

[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"